# cList

./: .gitignore  CHANGELOG.md  CMakeLists.txt  ISSUE_TEMPLATE.md  LICENSE  README.md  index.md
docs/: index.md
docs/examples/: append.c  append_element.c  get.c  map.c  reduce.c  slice.c
examples/: filter.c
include/: list.h
src/: append.c  append_element.c  extend.c  filter.c  get.c  len.c  map.c  max.c  min.c  new_list.c  print_element.c  print_list.c  range.c  reduce.c  slice.c  sort.c  sorted.c
